<resources>
    <string name="app_name">LTDD_CS2001_Nhom1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_myDay">My Day</string>
    <string name="menu_important">Important</string>
    <string name="menu_planned">Planned</string>
    <string name="menu_assigned">Assigned to me</string>
    <string name="menu_tasks">Tasks</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>