<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_myDay">

    <fragment
        android:id="@+id/nav_myDay"
        android:name="com.example.test.ui.myday.MyDayFragment"
        android:label="@string/menu_myDay"
        tools:layout="@layout/fragment_myday" />

    <fragment
        android:id="@+id/nav_important"
        android:name="com.example.test.ui.important.ImportantFragment"
        android:label="@string/menu_important"
        tools:layout="@layout/fragment_important" />
    <fragment
        android:id="@+id/nav_planned"
        android:name="com.example.test.ui.planned.PlannedFragment"
        android:label="@string/menu_planned"
        tools:layout="@layout/fragment_planned" />
    <fragment
        android:id="@+id/nav_assigned"
        android:name="com.example.test.ui.assigned.AssignedFragment"
        android:label="@string/menu_assigned"
        tools:layout="@layout/fragment_assigned" />
    <fragment
        android:id="@+id/nav_tasks"
        android:name="com.example.test.ui.tasks.TasksFragment"
        android:label="@string/menu_tasks"
        tools:layout="@layout/fragment_tasks" />
</navigation>